--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ${{ env.REQUIREMENTS_FILE }}
+
+      - name: Install shinylive python package
+        run: python -m pip install shinylive
   
       - name: Build ShinyLive site
         run: shinylive export . site
